fix bad char breaking indexing for native streaming

--- a/native-streaming.mdx
+++ b/native-streaming.mdx
@@ -247,7 +247,7 @@ print(result.features)
 
 Native streaming is ideal for:
 - High-volume data ingestion (>1000 messages/second)
-- Low-latency feature computation (<10ms)
+- Low-latency feature computation (&lt;10ms)
 - Simple to moderate transformations
 - Stateless processing
 
