Update rm line number

--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -121,7 +121,7 @@ Before setting up the storage integration, ensure you have:
 - **Required Information**:
   - **AWS Account ID**: The AWS account ID where your Chalk environment is deployed. You should have this from your Chalk deployment, or Chalk can provide it.
   - **S3 Bucket Name**: Standard naming is `chalk-{organization}-data-bucket`. If this bucket does not exist or uses a different name, contact Chalk for clarification.
-  - **Snowflake Role Name**: The role name you defined in the Database Setup step (line 57 above), typically `CHALK_ROLE`
+  - **Snowflake Role Name**: The role name you defined in the Database Setup step (above), typically `CHALK_ROLE`
 
 ---
 
