short titles etc.

--- a/features.mdx
+++ b/features.mdx
@@ -1,5 +1,5 @@
 ---
-title: Features overview
+title: Features Overview
 shortTitle: Overview
 metaTitle: Features - Define features for training and inference.
 metaDescription: Features are properties of your data you want to train your model on. With Chalk, you can define your features in Python.
@@ -178,7 +178,6 @@ def __init__(
 Note that all fields have a default `MISSING` value.
 Therefore, you can construct feature classes with any subset
 of the fields you would like to use.
-
 
 ## Refactoring
 
