--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Queries overview
+title: Queries Overview
 shortTitle: Overview
 metaTitle: Queries - Fetch feature values via queries.
 metaDescription: Chalk computes features through online queries, which return real-time data as fast as possible, and offline queries, which are best for batch processing large amounts of data.
@@ -18,7 +18,7 @@ The first use case is accomplished through **online queries**, which try to
 return values for a single feature class as quickly as possible, taking
 advantage of caching and distributed execution.
 
-The latter use cases are accomplished through **offline queries** which use 
+The latter use cases are accomplished through **offline queries** which use
 the offline store and can return multiple instances of a feature class
 for multiple primary keys or timepoints.
 
