--- a/time.mdx
+++ b/time.mdx
@@ -1,5 +1,6 @@
 ---
-title: Time overview
+title: Time Overview
+shortTitle: Overview
 description: Manage feature timestamps and point-in-time query timestamps.
 published: true
 ---
