docs: fix headers

--- a/ambiguous-resolvers.mdx
+++ b/ambiguous-resolvers.mdx
@@ -1,3 +1,9 @@
+---
+title: Ambiguous Resolvers
+description: Ambiguous Resolvers
+published: true
+---
+
 ## Resolving Ambiguous Resolver Errors
 
 In standard operation, Chalk assumes that each [feature](/docs/features) is un-ambiguously resolved by a single "in-scope" [resolver](/docs/resolver-overview). If this assumption
