--- a/model_registry.mdx
+++ b/model_registry.mdx
@@ -38,14 +38,14 @@ To register a model from local files, provide the path to the model files and an
 You'll also want to specify the input and output schema for the model, which helps with validation and integration in your Chalk deployment.
 
 When registering a new model, you can specify a description which will be shown for the `Model` object in the Chalk dashboard. To register a new
-model, you should use the `client.register_model` method. This will create a new model in the registry and add a new model version.
+model, you should use the `client.register_model_namespace` method. This will create a new model in the registry and add a new model version.
 
 ```python
 from chalk.client import ChalkClient
 
 client = ChalkClient()
 
-client.register_model(
+client.register_model_namespace(
     name="RiskScoreModel",
     aliases=["v1.0"],
     model_paths=["./risk_score_model.pth"],
