getting-started page

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -23,7 +23,7 @@ The Chalk DataFrame library now supports method chaining, allowing expressions l
 ```python
 tbl = pa.table(
   {
-    "txns_last_hour": [[1, 2, 3, 4, 5], [100], [200, 201],
+    "txns_last_hour": [[1, 2, 3, 4, 5], [100], [200, 201]],
     "max_txns_allowed": [3, 5, 4],
   }
 )
