--- a/chalkdf/installation.mdx
+++ b/chalkdf/installation.mdx
@@ -18,7 +18,7 @@ To install `chalkdf`, check the following requirements:
 Install from PyPI:
 
 ```bash
-pip install chalkdf chalkpy
+pip install "chalkdf[chalkpy]"
 ```
 
 Alternatively, [download platform-specific wheels directly from PyPI](https://pypi.org/project/chalkdf/#files).
