--- a/chalkdf/getting-started.mdx
+++ b/chalkdf/getting-started.mdx
@@ -16,7 +16,7 @@ are already familiar with DataFrame libraries you can skip ahead to the full
 Given Python 3.10-3.13 and Linux/macOS 15+, you can install `chalkdf` via pip:
 
 ```bash
-pip install chalkdf chalkpy
+pip install "chalkdf[chalkpy]"
 ```
 
 ## Reading Data
@@ -30,7 +30,7 @@ Below we can initialize a `chalkdf.DataFrame` from a Python dictionary.
 ```python
 from chalkdf import DataFrame
 
-df = DataFrame.from_dict(
+df = DataFrame(
     {
         "name": ["Alice", "Bob", "Charlie"],
         "age": [25, 30, 35],
@@ -85,7 +85,8 @@ Carol Johnson | 1992-11-08             | Data Analyst
 
 DataFrame expressions allow you to transform and explore your data through a variety of operations.
 For example, given a DataFrame of values with id's, you could group the values by id and compute the
-aggregate sum.
+aggregate sum. We use the underscore notation `_` to reference the current DataFrame, to easily
+access columns without any additional wrappers.
 
 ```python
 >>> df.run()
@@ -99,7 +100,7 @@ id (int64) | value (int64)
 2          | 1
 2          | 2
 2          | 3
->>> grouped = df.agg(["id"], df.column("value").sum().alias("value_sum_by_id"))
+>>> grouped = df.agg(["id"], _.value.sum().alias("value_sum_by_id"))
 >>> grouped.run()
 DataFrame(materialized 2 rows x 2 columns)
 Schema: id (int64), value_sum_by_id (int64)
@@ -133,10 +134,11 @@ user_005         | item_9944        | click                     | 2024-11-08 18:
 
 ### `with_columns`
 
-To add new columns or modify existing columns in your DataFrame, you can use `DataFrame.with_columns`.
+To add new columns or modify existing columns in your DataFrame while retaining all original
+columns, you can use `DataFrame.with_columns`.
 
 ```python
->>> processed_interactions = df.with_columns({"user_id": df.column("user_id"), "long_session": df.column("session_duration_sec") > 180})
+>>> processed_interactions = df.with_columns({"user_id": _.user_id, "long_session": _.session_duration_sec > 180})
 >>> processed_interactions.select("user_id", "session_duration_sec", "long_session").run()
 DataFrame(materialized 5 rows x 3 columns)
 Schema: user_id (string), session_duration_sec (int64), long_session (bool)
@@ -152,9 +154,9 @@ user_005         | 167                          | False
 
 ### `project`
 
-To define more complex transformations, you can use `DataFrame.project` to take in a DataFrame as input and project
-to new columns based on provided expressions. In these expressions, you can use the underscore notation `_` to
-reference columns within your source DataFrame, and utilize the [`chalk.functions`](/api-docs#section-chalk-functions)
+To define more complex transformations without retaining all original columns, you can use `DataFrame.project` to take
+in a DataFrame as input and project to new columns based on provided expressions. In these expressions, you can use the
+underscore notation `_` to reference columns within your source DataFrame, and utilize the [`chalk.functions`](/api-docs#section-chalk-functions)
 library for a variety of operations.
 
 ```python
@@ -214,7 +216,7 @@ user_002         | item_8832        | purchase                  | 2024-11-08 15:
 user_003         | item_1203        | view                      | 2024-11-08 16:05:30       | 0.67           | home              | 78
 user_004         | item_4521        | add_to_cart               | 2024-11-08 17:45:12       | 0.78           | electronics       | 210
 user_005         | item_9944        | click                     | 2024-11-08 18:20:05       | 0.81           | sports            | 167
->>> df.filter(df.column("score") > 0.8).run()
+>>> df.filter(_.score > 0.8).run()
 DataFrame(materialized 3 rows x 7 columns)
 Schema: user_id (string), item_id (string), interaction_type (string), timestamp (timestamp[us]), score (double), category (string), session_duration_sec (int64)
 Showing all rows:
@@ -227,7 +229,7 @@ user_005         | item_9944        | click                     | 2024-11-08 18:
 
 ### `agg`
 
-To compute aggregations over groups of data, you can use `DataFrame.group_by` in combination with `DataFrame.agg`.
+To compute aggregations over groups of data, you can use `DataFrame.agg`.
 
 ```python
 >>> processed_interactions.agg(["long_session"], processed_interactions.column("score").mean().alias("avg_score")).run()
