--- a/chalkdf/getting-started.mdx
+++ b/chalkdf/getting-started.mdx
@@ -8,7 +8,7 @@ published: true
 This guide will walk you through installing `chalkdf` and performing some basic operations.
 If you are new to `chalkdf` or DataFrame libraries, this is a great place to start. If you
 are already familiar with DataFrame libraries you can skip ahead to the full
-[Reference Library](/dataframe-docs) or the [installation guide](/docs/chalkdf/installation)
+[Reference Library](https://docs.chalk.ai/dataframe-docs) or the [installation guide](/docs/chalkdf/installation)
 
 
 ## Installation
