--- a/choosing-online-offline-stores.mdx
+++ b/choosing-online-offline-stores.mdx
@@ -64,7 +64,8 @@ We offer four options for offline stores:
 | Amazon Redshift       | Columnar (Parquet)          |
 | Snowflake             | Columnar (Micro-partitions) |
 | Databricks Delta Lake | Columnar (Parquet)          |
+| Iceberg               | Columnar (Parquet)          |
 
 For customers with GCP cloud deployments, we generally recommend Google Big Query for its performance with
 analytical queries. However, generally, customers will choose the data store that they already use within
-their data platform.
+their data platform. 
